seo and readme design and readme update

--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 
 <head>
     <meta charset="utf-8">
-    <meta content="Sustainability, EcoLisis, EcoPolis" name="keywords">
-    <meta content="Alexandros Kourtis" name="author">
-    <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
-    <link href="assets/logo.png" rel="icon" type="image/png"/>
-    <title>EcoPolis App</title>
-    <meta content="The official website of EcoLisis" name="description">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>EcoPolis App | EcoLisis - Sustainable Solutions</title>
+    <meta name="description" content="EcoPolis App by EcoLisis - Sustainable Solutions. Rewarding eco-friendly actions, connecting citizens, businesses, and municipalities for a greener future.">
+    <meta name="keywords" content="EcoPolis, EcoLisis, Sustainability, App, Municipality, Recycling, Food Donation, Stray Animals, Green Spots, Community, Environment, Reward, Greece, Circular Economy, Social Impact, Smart City">
+    <meta name="author" content="Alexandros Kourtis, EcoLisis">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://ecopolis.app/">
+    <link rel="icon" href="assets/logo.png" type="image/png">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ecopolis.app/">
+    <meta property="og:title" content="EcoPolis App | EcoLisis - Sustainable Solutions">
+    <meta property="og:description" content="Rewarding eco-friendly actions, connecting citizens, businesses, and municipalities for a greener future.">
+    <meta property="og:image" content="https://ecopolis.app/assets/img/main.png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://ecopolis.app/">
+    <meta name="twitter:title" content="EcoPolis App | EcoLisis - Sustainable Solutions">
+    <meta name="twitter:description" content="Rewarding eco-friendly actions, connecting citizens, businesses, and municipalities for a greener future.">
+    <meta name="twitter:image" content="https://ecopolis.app/assets/img/main.png">
     <link crossorigin="anonymous" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" rel="stylesheet"/>
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -18,6 +34,8 @@
     <link href="assets/fonts/font-awesome.min.css" rel="stylesheet">
     <link href="assets/fonts/simple-line-icons.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    <!-- Accessibility: Language -->
+    <meta http-equiv="Content-Language" content="el">
 </head>
 
 <body data-bs-offset="56" data-bs-spy="scroll" data-bs-target="#mainNav" id="page-top">
