--- a/terms.html
+++ b/terms.html
@@ -3,17 +3,28 @@
 
 <head>
     <meta charset="utf-8">
-    <meta content="Sustainability, EcoLisis, EcoPolis" name="keywords">
-    <meta content="Alexandros Kourtis" name="author">
-    <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
-    <link href="assets/logo.png" rel="icon" type="image/png"/>
-    <title>EcoPolis App</title>
-    <meta content="The official website of EcoLisis" name="description">
-    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/fonts/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/fonts/simple-line-icons.min.css" rel="stylesheet">
-    <link crossorigin="anonymous" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Όροι Χρήσης | EcoPolis App | EcoLisis</title>
+    <meta name="description" content="Όροι χρήσης και πολιτική απορρήτου για το EcoPolis App από την EcoLisis - Sustainable Solutions. Μάθετε πώς προστατεύουμε τα προσωπικά σας δεδομένα.">
+    <meta name="keywords" content="EcoPolis, EcoLisis, Όροι Χρήσης, Πολιτική Απορρήτου, Sustainability, App, Municipality, Privacy, Greece, Community, Environment, GDPR">
+    <meta name="author" content="Alexandros Kourtis, EcoLisis">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://ecopolis.app/terms.html">
+    <link rel="icon" href="assets/logo.png" type="image/png">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ecopolis.app/terms.html">
+    <meta property="og:title" content="Όροι Χρήσης | EcoPolis App | EcoLisis">
+    <meta property="og:description" content="Όροι χρήσης και πολιτική απορρήτου για το EcoPolis App από την EcoLisis - Sustainable Solutions. Μάθετε πώς προστατεύουμε τα προσωπικά σας δεδομένα.">
+    <meta property="og:image" content="https://ecopolis.app/assets/img/main.png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://ecopolis.app/terms.html">
+    <meta name="twitter:title" content="Όροι Χρήσης | EcoPolis App | EcoLisis">
+    <meta name="twitter:description" content="Όροι χρήσης και πολιτική απορρήτου για το EcoPolis App από την EcoLisis - Sustainable Solutions. Μάθετε πώς προστατεύουμε τα προσωπικά σας δεδομένα.">
+    <meta name="twitter:image" content="https://ecopolis.app/assets/img/main.png">
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -21,6 +32,8 @@
     <link href="assets/fonts/font-awesome.min.css" rel="stylesheet">
     <link href="assets/fonts/simple-line-icons.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    <!-- Accessibility: Language -->
+    <meta http-equiv="Content-Language" content="el">
 </head>
 
 <body data-bs-offset="56" data-bs-spy="scroll" data-bs-target="#mainNav" id="page-top">
@@ -30,6 +43,21 @@
            style="color: #007CC2 !important;"><img alt=""
                                                    src="./assets/brand.png"
                                                    style=" width: 150px"></a>
+        <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
+                class="navbar-toggler float-end" data-bs-target="#navbarResponsive" data-bs-toggle="collapse"><i
+                class="fa fa-bars"></i></button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Αρχική Σελίδα</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<nav class="navbar navbar-ubuntuLight navbar-expand-lg fixed-top bg-white" id="mainNav">
+    <div class="container"><a class="navbar-brand fw-bold" href="./index.html"
+                              style="color: #007CC2 !important;"><img alt=""
+                                                                      src="./assets/brand.png"
+                                                                      style=" width: 150px"></a>
         <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler float-end" data-bs-target="#navbarResponsive" data-bs-toggle="collapse"><i
                 class="fa fa-bars"></i></button>
@@ -58,6 +86,17 @@
                         σχετικά
                         με τη συλλογή, τη χρήση και την αποκάλυψη
                         Προσωπικών Δεδομένων εάν κάποιος αποφασίσει να χρησιμοποιήσει την Υπηρεσία μας. </p>
+<section class="features" id="terms" style="background: #f8f9fa; padding: 60px 0 40px 0; min-height: 100vh;">
+    <div class="container">
+        <div class="text-center section-heading">
+            <h2 style="font-family: 'myFirstFontSkinny', serif; color: #007CC2; font-weight: bold;">Όροι Χρήσης &amp; Πολιτική Απορρήτου</h2>
+            <hr style="width: 60px; border-top: 3px solid #23AA85; margin: 20px auto;">
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-9 col-md-11 col-12" style="background: #fff; border-radius: 16px; box-shadow: 0 2px 16px rgba(0,0,0,0.04); padding: 32px 24px; margin-bottom: 32px;">
+                <div id="content" style="font-size: 1.1rem; color: #222;">
+                    <p>Το <strong>Ecolisis - Sustainable Solutions</strong> δημιούργησε την εφαρμογή <strong>EcoPolis App</strong> ως δωρεάν εφαρμογή. Η υπηρεσία παρέχεται χωρίς κόστος και προορίζεται για χρήση ως έχει.</p>
+                    <p>Αυτή η σελίδα ενημερώνει τους επισκέπτες σχετικά με τις πολιτικές μας για τη συλλογή, χρήση και αποκάλυψη προσωπικών δεδομένων εάν κάποιος αποφασίσει να χρησιμοποιήσει την Υπηρεσία μας.</p>
                     <p> Εάν επιλέξετε να χρησιμοποιήσετε την Υπηρεσία μας, τότε συμφωνείτε με τη συλλογή και χρήση
                         πληροφοριών στο
                         σχέση με αυτήν την πολιτική. Οι Προσωπικές Πληροφορίες που συλλέγουμε χρησιμοποιούνται για
