replaced old email with new one in readme.md and terms.html, and index.html

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', end
         <p>©&nbsp;EcoPolis App 2022. All Rights Reserved.</p>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="terms.html">Terms</a></li>
-            <li class="list-inline-item"><a href="mailto:papanikolakie@eco-lisis.com">papanikolakie@eco-lisis.com</a>
+            <li class="list-inline-item"><a href="mailto:akourtisdev@gmail.com">akourtisdev@gmail.com</a>
             </li>
         </ul>
     </div>
