--- a/terms.html
+++ b/terms.html
@@ -246,7 +246,7 @@
         <p>©&nbsp;EcoPolis App 2022. All Rights Reserved.</p>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="terms.html">Terms</a></li>
-            <li class="list-inline-item"><a href="mailto:papanikolakie@eco-lisis.com">papanikolakie@eco-lisis.com</a>
+            <li class="list-inline-item"><a href="mailto:akourtisdev@gmail.com">akourtisdev@gmail.com</a>
         </ul>
     </div>
 </footer>
